Class io in libs-jmm now supports printing booleans